// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar Recon nav > matches sidebar snapshot in Arabic (RTL) with flag on 1`] = `
<div>
  <aside
    class="flex h-full flex-col border-e bg-sidebar-background text-sidebar-foreground transition-[width] duration-150 w-60"
    dir="rtl"
  >
    <div
      class="flex h-14 items-center justify-between border-b px-3"
    >
      <a
        class="flex items-center gap-2"
        href="/app"
      >
        <span>
          Logo
        </span>
      </a>
      <button
        aria-label="طي الشريط الجانبي"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 text-muted-foreground"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 rtl:scale-x-[-1]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="relative overflow-hidden flex-1 py-3"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: hidden; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <nav
            aria-label="التنقل الرئيسي"
            class="space-y-1 px-2"
            role="navigation"
          >
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/qa-loop"
            >
              <svg
                class="lucide lucide-zap h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                />
              </svg>
              <span
                class="truncate"
              >
                حلقة ضمان الجودة
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              data-testid="sidebar-nav-recon"
              href="/recon"
            >
              <svg
                class="lucide lucide-shield h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              <span
                class="truncate"
              >
                ريكون
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/performance"
            >
              <svg
                class="lucide lucide-chart-no-axes-column h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="18"
                  y1="20"
                  y2="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="20"
                  y2="4"
                />
                <line
                  x1="6"
                  x2="6"
                  y1="20"
                  y2="14"
                />
              </svg>
              <span
                class="truncate"
              >
                الأداء
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/app"
            >
              <svg
                class="lucide lucide-house h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                />
                <path
                  d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                />
              </svg>
              <span
                class="truncate"
              >
                لوحة التحكم
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/projects"
            >
              <svg
                class="lucide lucide-folder-open h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
                />
              </svg>
              <span
                class="truncate"
              >
                المشاريع
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/test-results"
            >
              <svg
                class="lucide lucide-clipboard-list h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="4"
                  rx="1"
                  ry="1"
                  width="8"
                  x="8"
                  y="2"
                />
                <path
                  d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M12 11h4"
                />
                <path
                  d="M12 16h4"
                />
                <path
                  d="M8 11h.01"
                />
                <path
                  d="M8 16h.01"
                />
              </svg>
              <span
                class="truncate"
              >
                نتائج الاختبار
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/monitors"
            >
              <svg
                class="lucide lucide-activity h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
                />
              </svg>
              <span
                class="truncate"
              >
                المراقبة
              </span>
            </a>
          </nav>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 bg-border h-[1px] w-full"
      data-orientation="horizontal"
      role="none"
    />
    <div
      class="px-2 py-3"
    >
      <a
        class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
        href="/settings"
      >
        <svg
          class="lucide lucide-settings h-5 w-5 flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span
          class="truncate"
        >
          الإعدادات
        </span>
      </a>
    </div>
  </aside>
</div>
`;

exports[`Sidebar Recon nav > matches sidebar snapshot in English with flag on 1`] = `
<div>
  <aside
    class="flex h-full flex-col border-e bg-sidebar-background text-sidebar-foreground transition-[width] duration-150 w-60"
    dir="ltr"
  >
    <div
      class="flex h-14 items-center justify-between border-b px-3"
    >
      <a
        class="flex items-center gap-2"
        href="/app"
      >
        <span>
          Logo
        </span>
      </a>
      <button
        aria-label="Collapse sidebar"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors duration-150 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 text-muted-foreground"
      >
        <svg
          class="lucide lucide-chevron-left h-4 w-4 rtl:scale-x-[-1]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="relative overflow-hidden flex-1 py-3"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: hidden; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <nav
            aria-label="Main navigation"
            class="space-y-1 px-2"
            role="navigation"
          >
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/qa-loop"
            >
              <svg
                class="lucide lucide-zap h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                />
              </svg>
              <span
                class="truncate"
              >
                QA Loop
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              data-testid="sidebar-nav-recon"
              href="/recon"
            >
              <svg
                class="lucide lucide-shield h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
                />
              </svg>
              <span
                class="truncate"
              >
                Recon
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/performance"
            >
              <svg
                class="lucide lucide-chart-no-axes-column h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="18"
                  y1="20"
                  y2="10"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="20"
                  y2="4"
                />
                <line
                  x1="6"
                  x2="6"
                  y1="20"
                  y2="14"
                />
              </svg>
              <span
                class="truncate"
              >
                Performance
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/app"
            >
              <svg
                class="lucide lucide-house h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                />
                <path
                  d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                />
              </svg>
              <span
                class="truncate"
              >
                Dashboard
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/projects"
            >
              <svg
                class="lucide lucide-folder-open h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m6 14 1.5-2.9A2 2 0 0 1 9.24 10H20a2 2 0 0 1 1.94 2.5l-1.54 6a2 2 0 0 1-1.95 1.5H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h3.9a2 2 0 0 1 1.69.9l.81 1.2a2 2 0 0 0 1.67.9H18a2 2 0 0 1 2 2v2"
                />
              </svg>
              <span
                class="truncate"
              >
                Projects
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/test-results"
            >
              <svg
                class="lucide lucide-clipboard-list h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="4"
                  rx="1"
                  ry="1"
                  width="8"
                  x="8"
                  y="2"
                />
                <path
                  d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
                />
                <path
                  d="M12 11h4"
                />
                <path
                  d="M12 16h4"
                />
                <path
                  d="M8 11h.01"
                />
                <path
                  d="M8 16h.01"
                />
              </svg>
              <span
                class="truncate"
              >
                Test Results
              </span>
            </a>
            <a
              class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
              href="/monitors"
            >
              <svg
                class="lucide lucide-activity h-5 w-5 flex-shrink-0"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
                />
              </svg>
              <span
                class="truncate"
              >
                Monitors
              </span>
            </a>
          </nav>
        </div>
      </div>
    </div>
    <div
      class="shrink-0 bg-border h-[1px] w-full"
      data-orientation="horizontal"
      role="none"
    />
    <div
      class="px-2 py-3"
    >
      <a
        class="flex items-center gap-3 rounded-md px-3 py-2 text-sm font-medium transition-colors duration-150 text-muted-foreground hover:bg-accent hover:text-accent-foreground"
        href="/settings"
      >
        <svg
          class="lucide lucide-settings h-5 w-5 flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span
          class="truncate"
        >
          Settings
        </span>
      </a>
    </div>
  </aside>
</div>
`;
